--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -158,3 +158,19 @@ img.large{
 .error{
   color: #a02020;
 }
+
+.alert{
+  padding: 1rem;
+  border: 0.1rem solid transparent;
+  border-radius: 0.5rem;
+}
+
+.alert-info{
+  columns: blue;
+  background-color: #e0e0ff;
+}
+
+.alert-danger{
+  columns: #a02020;
+  background-color: #ffe0e0e0;
+}
